--- a/PopOverViewForTutorial/Base.lproj/Main.storyboard
+++ b/PopOverViewForTutorial/Base.lproj/Main.storyboard
@@ -63,19 +63,19 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loaded by SecondViewController" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NDk-cv-Gan">
-                                <rect key="frame" x="192" y="329" width="215.5" height="17"/>
+                                <rect key="frame" x="192.5" y="329" width="215" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6ho-Af-duU">
-                                <rect key="frame" x="51" y="74" width="89" height="39"/>
+                                <rect key="frame" x="51" y="74" width="132" height="44"/>
                                 <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="89" id="Mn2-6f-RCQ"/>
-                                    <constraint firstAttribute="height" constant="39" id="dIo-bL-QhD"/>
+                                    <constraint firstAttribute="width" constant="132" id="Mn2-6f-RCQ"/>
+                                    <constraint firstAttribute="height" constant="44" id="dIo-bL-QhD"/>
                                 </constraints>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" title="Show Popup"/>
                                 <state key="highlighted">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
